<resources>
    <string name="app_name">Amazon Coffee</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="signup">สมัครสมาชิก</string>
    <string name="guest">เยี่ยมชม</string>

    <string name="name">ชื่อ</string>
    <string name="sur">นามสกุล</string>
    <string name="add">ที่อยู่</string>
    <string name="phone">โทรศัพท์</string>
    <string name="user">ผู้ใช้</string>
    <string name="pass">รหัส</string>
    <string name="order">สั่งกาแฟ</string>
    <string name="readorder">ตรวจสอบรายการ</string>
    <string name="headorder">รายการ กาแฟ</string>
    <string name="headconfirm">ใบเสร็จรับเงิน</string>
    <string name="hr">เวลาที่จะมารับกาแฟ</string>
    <string name="title_activity_maps">Map</string>
    <string name="address_shop">2 หมู่ 1 ต.ห้วยพุก อ.ดงเจริญ จ.พิจิตร 66210</string>
    <string name="phone_shop">Tel: 083-0684234</string>
    <string name="information">*แตะโลโก้เพื่อตรวจสอบเส้นทาง*</string>
    <string name="list_order">ดูรายการสั่งกาแฟ</string>
    <string name="finish">รับแล้ว</string>
    <string name="non_finish">รอ</string>
    <string name="aboutMe">เกี่ยวกับร้าน</string>
    <string name="money">จำนวนเงิน</string>
    <string name="thb">บาท</string>
    <string name="date">วันที่</string>
    <string name="coffee">รายการ</string>
    <string name="vol">จำนวน</string>
    <string name="sta">รับ</string>
    <string name="back">ย้อนกลับ</string>
    <string name="hr1">ชั่วโมง</string>
    <string name="hr2">ชั่วโมง</string>
    <string name="hr3">ชั่วโมง</string>
    <string name="hr4">ชั่วโมง</string>
    <string name="price">ราคา</string>
    <string name="amount">จำนวน</string>
    <string name="addmore">เพิ่มรายการสินค้า</string>
    <string name="confirmorder">ยืนยัน</string>
    <string name="touch">*แตะเพื่อลบรายการ*</string>

</resources>
