<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nsru.demsomboon.ratchasak.phijitcoffee.ShowListOrder"
    android:background="@android:color/holo_green_light">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickBackShowListOrder"
        android:text="@string/back"
        android:id="@+id/button12"
        android:layout_alignParentBottom="true"
        android:textColor="@color/text" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView3"
        android:layout_above="@+id/button12"
        android:background="@android:color/holo_green_light"
        android:layout_below="@+id/linTopShowList" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linTopShowList">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/textView35"
            android:layout_weight="2"
            android:textSize="@dimen/h2"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:id="@+id/textView36"
            android:layout_weight="3"
            android:textSize="@dimen/h2"
            android:textColor="@color/text"
            android:layout_marginLeft="25dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vol"
            android:id="@+id/textView37"
            android:layout_weight="1.5"
            android:textSize="@dimen/h2"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sta"
            android:id="@+id/textView38"
            android:layout_weight="1"
            android:textSize="@dimen/h2"
            android:textColor="@color/text" />
    </LinearLayout>
</RelativeLayout>
