<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nsru.demsomboon.ratchasak.phijitcoffee.MainActivity"
    android:background="@android:color/holo_green_light">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/linBackMain"
        android:id="@+id/linBottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button"
            android:layout_weight="1"
            android:textColor="@color/text"
            android:onClick="clickSignIn" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:onClick="clickSignUpMain"
            android:textColor="@color/text" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:id="@+id/linLogin"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:id="@+id/imageView"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView7"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText6"
            android:hint="@string/user"
            android:inputType="text"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:background="#82ffffff"
            android:padding="10dp"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText8"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:background="#82ffffff"
            android:padding="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linBackMain"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:textColor="@color/text"
            android:onClick="clickGuest" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/aboutMe"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:textColor="@color/text"
            android:onClick="clickAboutMe" />
    </LinearLayout>

</RelativeLayout>
