<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/holo_green_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:id="@+id/linShop">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/marker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/textView31"
                android:textSize="@dimen/h1"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="@color/text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_shop"
            android:id="@+id/textView32"
            android:textSize="@dimen/h2"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_shop"
            android:id="@+id/textView33"
            android:textSize="@dimen/h2"
            android:textColor="@color/text" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:onClick="clickBackMap"
        android:textColor="@color/text" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nsru.demsomboon.ratchasak.phijitcoffee.MapsActivity"
        android:layout_below="@+id/linShop"
        android:layout_above="@+id/button10"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:layout="@layout/my_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:id="@+id/textView34"
        android:textSize="@dimen/h2"
        android:textColor="@color/text"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/linShop" />

</RelativeLayout>